[project]
name = "servicenow-mcp"
version = "0.1.0"
description = "MCP server exposing guarded ServiceNow developer actions to Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.2.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[project.scripts]
servicenow-mcp = "servicenow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]
